# jvmtidemo

app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jvmtidmeo/: MainActivity.kt  MemoryFreeTestItem.kt  MemorySample.kt  MineApp.kt  SecondActivity.kt
mylibrary/: build.gradle.kts
mylibrary/src/main/cpp/: CMakeLists.txt  common.h  entry.cpp  jnicall.cpp  jnicall.h  memory.cpp  recordlog.cpp  thread_utils.h
mylibrary/src/main/java/com/example/mylibrary/: JavaConfig.java  JvmtiConfig.kt  JvmtiReport.java
